# Research-Agent

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  README.md  api.py  api_agui.py  docker-compose.yml  fly.toml  main.py  prompt.txt  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt
frontend/: next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/app/api/research/: route.ts
src/: __init__.py  agent.py  agui_agent.py  config.py  exceptions.py  logging_config.py  prompts.py
src/tools/: __init__.py  duckduckgo_search.py  registry.py  serpapi_search.py  tavily_search.py
